test android flickering fix

--- a/www/css/mobile.css
+++ b/www/css/mobile.css
@@ -9,6 +9,9 @@
 */
 -----------------------------------------------------------------------------------------------------------*/
 
+body { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; } 
+
+
 /* MANUALLY ADDED OVERRIDES */
 div.icon img {
    	display:block;
